[tool.poetry]
name = "crawl-poc"
version = "0.1.0"
description = ""
authors = ["himanshu.mishra <himanshu@edralabs.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
crawl4ai = "^0.4.24"
sqlalchemy = "^2.0.36"
psycopg2 = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
